<resources>
    <string name="app_name">UD Beacons</string>
    <!-- Strings shared preferences -->
    <string name="shared_preference_file">udbeacons.preferences</string>
    <string name="user_pref_name">user_name</string>
    <string name="user_pref_role">user_role</string>
    <string name="user_pref_role_id">user_role_id</string>
    <string name="user_pref_email">user_email</string>
    <string name="user_pref_menu">user_menu</string>
    <string name="user_pref_schedulle">user_schedulle</string>

    <!-- Strings related to login -->
    <string name="default_name">Nombre Usuario</string>
    <string name="default_email">usuario@correo.udistrital.edu.co</string>
    <string name="default_role">Estudiante</string>
    <string name="prompt_email">Correo</string>
    <string name="prompt_password">Clave</string>
    <string name="action_sign_in">Inicio Sesión</string>
    <string name="action_sign_in_short">Inicio Sesión</string>
    <string name="error_invalid_email">Correo no válido</string>
    <string name="error_invalid_password">Por favor ingresa la clave</string>
    <string name="error_incorrect_password">Clave incorrecta</string>
    <string name="error_field_required">Este campo es obligatorio</string>
    <string name="permission_rationale">"Los permisos de contactos son necesarios para proporcionar terminaciones de correo electrónico"</string>
    <string name="title_activity_main">UD Beacons</string>

    <!-- Strings related to registry -->
    <string name="error_different_password">Las contraseñas no coinciden</string>
    <string name="error_empty_name">Indique su nombre</string>
    <string name="error_empty_lastname">Indique su apellido</string>
    <string name="error_empty_id">Indique su número de identificación</string>
    <string name="error_empty_externalID">Indique su código de estudiante</string>
    <string name="error_invalid_id">Número de identificación inválido</string>
    <string name="error_invalid_externalID">Código de estudiante inválido</string>

    <!-- Strings related to registry -->
    <string name="prompt_password2">Repite la clave</string>
    <string name="prompt_user_id">Cédula</string>
    <string name="prompt_user_external_code">Código de estudiante</string>
    <string name="prompt_registry_name">Nombre(s)</string>
    <string name="prompt_registry_lastname">Apellido(s)</string>
    <string name="registry_fail">Fallo registro: </string>
    <string name="registry_general_error">Error general en proceso de registro</string>
    <string name="registry_ok">Registro exitoso</string>

    <!-- Strings related to Exceptions -->
    <string name="login_general_error">Error general en proceso de autenticación</string>
    <string name="failed_com_to_server">Fallo de comunicación con el servidor. Por favor inténtelo después</string>
    <string name="login_fail">Fallo inicio de sesión: </string>


    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="navigation_drawer_open">Abrir Menú</string>
    <string name="navigation_drawer_close">Cerrar Menú</string>

    <string name="action_example">Acción de Ejemplo</string>

    <!-- Menu Names -->
    <string name="titleQueries">Consultas</string>
    <string name="action_settings">Configuraciones</string>
    <string name="schedule">Horario</string>
    <string name="directory">Directorio UD</string>
    <string name="uWebsite">Sitio Web UD</string>
    <string name="home">Inicio</string>
    <string name="social">Social</string>
    <string name="fb">Facebook</string>
    <string name="twitter">Twitter</string>
    <string name="ldn">Linkedin</string>
    <string name="condor">Condor SGA</string>
    <string name="tools">Herramientas</string>
    <string name="share">Compartir</string>
    <string name="exit">Salir</string>

    <!-- Menu IDs -->
    <string name="fb_id">Facebook</string>
    <string name="twitter_id">Twitter</string>
    <string name="ldn_id">LinkedIn</string>

    <!-- Strings days of week -->
    <string name="monday">Lunes</string>
    <string name="tuesday">Martes</string>
    <string name="wednesday">Miercoles</string>
    <string name="thursday">Jueves</string>
    <string name="friday">Viernes</string>
    <string name="saturday">Sabado</string>

    <!-- Schedulle table -->
    <string name="subject">Asignatura</string>
    <string name="teacher">Docente</string>
    <string name="timeStart">Hora Inicio</string>
    <string name="timeEnd">Hora Fin</string>
    <string name="classroom">Salón</string>

    <!-- Dialogs -->
    <string name="loading_title">Aguarda ...</string>
    <string name="loading_message">Estamos procesando tu solicitud</string>
    <string name="welcome">Hola! Que bueno que estas aquí. Vamos a navegar</string>
    <string name="welcome2">Bienvenido a</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_schedulle">SchedulleActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <!-- Beacons management -->
    <string name="key_zone_classroom">classroom</string>
    <string name="value_zone_classroom">C302</string>
    <string name="key_zone_university">university_zone</string>
    <string name="value_zone_university">ENTRADA</string>
    <string name="channel_name">BeaconsNotif</string>
    <string name="channel_description">Notificaciones a partir de beacons</string>
    <string name="registry">Regístrate</string>
    <string name="attendance_ok">Hemos registrado su asistencia a la clase</string>
    <string name="attendance_error">Fallo registranddo su asistencia a la clase</string>

</resources>
