<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/registry_form"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background1"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="co.edu.ingsw.udstrital.udbeacons.activities.LoginActivity">


        <ImageView
            android:layout_width="266dp"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/wireless_internet" />

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:fontFamily="@font/permanent_marker"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textColor="@android:color/background_light"
            android:textSize="30sp"
            android:textStyle="bold"
            android:visibility="visible" />

        <!-- Login progress -->
        <ProgressBar
            android:id="@+id/registry_progress"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:visibility="gone" />

        <LinearLayout
            android:id="@+id/registry_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <AutoCompleteTextView
                    android:id="@+id/user_id_registry"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/prompt_user_id"
                    android:inputType="number"
                    android:maxLines="1"
                    android:popupBackground="@android:color/background_light"
                    android:singleLine="true"
                    android:textColor="@color/white"
                    android:textColorHighlight="@color/white"
                    android:typeface="sans" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <AutoCompleteTextView
                    android:id="@+id/user_external_code_registry"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/prompt_user_external_code"
                    android:inputType="number"
                    android:maxLines="1"
                    android:popupBackground="@android:color/background_light"
                    android:singleLine="true"
                    android:textColor="@color/white"
                    android:textColorHighlight="@color/white"
                    android:typeface="sans" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <AutoCompleteTextView
                    android:id="@+id/name_registry"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/prompt_registry_name"
                    android:inputType="text|textPersonName"
                    android:maxLines="1"
                    android:popupBackground="@android:color/background_light"
                    android:singleLine="true"
                    android:textColor="@color/white"
                    android:textColorHighlight="@color/white"
                    android:typeface="sans" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <AutoCompleteTextView
                    android:id="@+id/lastname_registry"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/prompt_registry_lastname"
                    android:inputType="text|textPersonName"
                    android:maxLines="1"
                    android:popupBackground="@android:color/background_light"
                    android:singleLine="true"
                    android:textColor="@color/white"
                    android:textColorHighlight="@color/white"
                    android:typeface="sans" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <AutoCompleteTextView
                    android:id="@+id/email_registry"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/prompt_email"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:popupBackground="@android:color/background_light"
                    android:singleLine="true"
                    android:textColor="@color/white"
                    android:textColorHighlight="@color/white"
                    android:typeface="sans" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/password_registry"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_password"
                    android:imeActionId="6"
                    android:imeActionLabel="@string/registry"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColor="@color/white"
                    android:textColorHint="#ffffff"
                    android:typeface="sans" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/password_registry2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_password2"
                    android:imeActionId="6"
                    android:imeActionLabel="@string/registry"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColor="@color/white"
                    android:textColorHint="#ffffff"
                    android:typeface="sans" />

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/registry_action_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/button_bg_rounded_corners"
                android:fontFamily="@font/permanent_marker"
                android:text="@string/registry"
                android:textAlignment="center"
                android:textColor="@android:color/background_light"
                android:textSize="18sp" />

        </LinearLayout>
    </LinearLayout>

</ScrollView>